[package]
name = "count_distinct"
version = "0.1.13"
edition = "2021"

[lib]
name = "count_distinct"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
cvmcount = "0.2.0"
numpy = "0.21.0"
pyo3 = { version = "0.21.2", features = ["abi3", "abi3-py310", "abi3-py311", "abi3-py312"] }
rustc-hash = "2.0.0"

[profile.release]
lto = true
codegen-units = 1
