[build-system]
requires = ["maturin>=1.6,<2.0", "numpy >= 1.11.0"]
build-backend = "maturin"

[tool.pytest.ini_options]
minversion = "6.2.2"
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "tests",
]

[project]
name = "count_distinct"
description = "Use the CVM algorithm to quickly estimate the number of distinct elements in a stream"
authors = [{ name = "Stephan Hügel", email = "urschrei@gmail.com" }]
license = {file = "license.txt"}
keywords = ["cvm", "count-distinct", "estimation"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
Repository = "https://github.com/urschrei/cvmcount_py"
Tracker = "https://github.com/urschrei/cvmcount_py/issues"
[tool.maturin]
features = ["pyo3/extension-module"]

[project.optional-dependencies]
test = [
    "pytest >= 7.4.2", "pyperf >= 2.7.0"
]
[tool.maturin.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}
